tests/good/printf/print_string.go
package main;
import "fmt";

func main(){
	fmt.Print(true,"false")
	fmt.Print("\n")
}

/*
== Expected program output ==
truefalse
*/