tests/bad/func/params/unknown_input_type.go
package main;

func f (n s) {
}

func main (){}


/*
== Expected compiler output ==
File "./tests/bad/func/params/unknown_input_type.go", line 3, characters 10-11:
error: unknown type 's'
*/